generating apis from the swagger
